<resources>
    <string name="app_name">Transport</string>
    <string name="title">Transport survey</string>
    <string name="username">UserName</string>
    <string name="common_transport">Common Transport</string>
    <string name="bus">Bus</string>
    <string name="metro">Metro</string>
    <string name="private_transport">Private Transport</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
</resources>